plugins {
    id 'org.springframework.boot' version '3.0.6'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'com.palantir.docker' version '0.35.0'
    id 'java'
    id "idea"
}

sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {
        url "https://packages.confluent.io/maven"
    }
}


dependencies {
    implementation project(':common-lib')
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-tracing-bridge-otel'
    implementation 'io.opentelemetry:opentelemetry-exporter-zipkin'
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.apache.kafka:kafka-streams'
    implementation "io.confluent:kafka-avro-serializer:7.3.3"
    implementation "io.confluent:kafka-streams-avro-serde:7.3.3"
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
}


jar {
    enabled = false
}


docker {
    dependsOn bootJar
    name "ashutoshsahoo/${project.name}:latest"
    buildArgs([JAR_FILE: "${project.name}.jar", VERSION: "${project.parent.version}"])
    files bootJar
//    tag 'latest', "${project.parent.version}"
//    noCache true
}


idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}